--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,4 +1,4 @@
-#root {
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -99,4 +99,4 @@ button:hover {
   padding: 20px;
   background-color: #f9f9f9;
   border-radius: 4px;
-}
+} */
